# MAIL-APPLICATION

./: .env.development  .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  create_admin.py  pyproject.toml
backend/app/: deps.py  main.py  models.py  schemas.py
backend/app/api/: v1.py
backend/app/core/: config.py  redis.py  security.py
backend/app/db/: session.py
backend/app/imap/: handler.py
backend/app/services/: auth.py  backup.py  cloudflare.py  maildir.py  metrics.py  postfix_gateway.py  redis.py  smtp.py  webhooks.py
backend/app/smtp/: handler.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_email_auth_marketing_tables.py
backend/nexudo_mail_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: DEPLOYMENT.md  server-and-dns.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  manifest.ts  providers.tsx
frontend/components/: app-shell.tsx  compose-modal.tsx  dashboard-shell.tsx  log-table.tsx  stat-card.tsx
frontend/hooks/: use-emails.ts
frontend/lib/: api.ts
frontend/public/: manifest.json  sw.js
frontend/store/: auth-store.ts  ui-store.ts
infra/: pgbouncer.ini
infra/backups/: README.md  backup.sh  backup_passphrase.example  gpg_encrypt.sh  restore.sh  scheduler.sh
secrets/: DATABASE_URL.example  ENCRYPTION_KEY.example  JWT_REFRESH_SECRET.example  JWT_SECRET.example  POSTGRES_PASSWORD.example  REDIS_URL.example
(+22 files in other folders)
