[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexudo-mail-backend"
version = "0.1.0"
description = "Nexudo Mail backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic-settings>=2.3.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "pyotp>=2.9.0",
  "cryptography>=42.0.8",
  "redis>=5.0.7",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
